@@ -9,7 +9,7 @@ x86_64-unknown-linux-gnu	gcc 3.3.4	0.0.4	ok
 x86_64-pc-linux-gnu		gcc 3.4.3	0.0.5	ok
 i686-pc-cygwin			gcc 2.95.3-10	0.0.2	ok
 i386-pc-mingw32			gcc 2.95.3-10	0.0.2	ok, using -mno-cygwin
-i386-pc-mingw32			gcc 2.95.3-6	0.0.5	ok, cross compiled
+i386-pc-mingw32			gcc 2.95.3-6	0.0.6	ok, cross compiled
 i386-unknown-freebsd4.10	gcc 2.95.4	0.0.3	ok
 i386-unknown-freebsd4.11	gcc 2.95.4	0.0.5	ok
 i386-unknown-freebsd5.3		gcc 3.4.2	0.0.5	ok
