@@ -384,7 +384,7 @@
  author  = {Rolf H. Jansen and Martin Kirschning},
  title   = "{Arguments and an accurate Model for the Power-Current
              Formulation of Microstrip Characteristic Impedance}",
- journal = "{"Archiv f\"ur Elektronik und \"Ubertragungstechnik
+ journal = "{Archiv f\"ur Elektronik und \"Ubertragungstechnik
              (AE\"U)}",
  volume  = {37},
  year    = {1983},
